api gat eway tugab qoldi 90%
